--- a/app/components/SearchBarCollectivites.css
+++ b/app/components/SearchBarCollectivites.css
@@ -6,6 +6,8 @@
     box-shadow: 0px 4px 12px #ddd;
     overflow-y: auto;
     overflow-x: clip;
+    width:570px;
+    position:absolute
 }
 .result-collectivite{
     width: 100%;
@@ -39,8 +41,8 @@
     color: #666666;
 }
 
-
-
-
-
-
+.list-button{
+    text-decoration: none;
+    width:100%;
+    height:100%;
+}
