--- a/app/collectivite/indicateur/page.css
+++ b/app/collectivite/indicateur/page.css
@@ -8,3 +8,82 @@
     align-items: center;
     gap: 16px
 }
+
+.align-flex-seuils--no-gap{
+    display: flex;
+    align-items: center;
+    color: var(--light-text-mention-grey)
+}
+
+.flex-box-analyse{
+    display: flex;
+    align-items: flex-start;
+    padding: 24px;
+    flex-direction: column;
+    gap: 48px;
+    border: 1px solid var(--light-border-default-grey, #DDD);
+}
+
+.flex-box-analyse-titles{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+}
+
+.flex-box-analyse-subtitle{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    align-self: stretch;
+}
+
+.flex-box-analyse-subtitle-head{
+    display: flex;
+    gap:2px;
+}
+
+.display-inline{
+    display: inline;
+}
+
+.flex-box-analyse-graphe{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+}
+
+.flex-box-analyse-graphe--bar-container{
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 2px;
+    align-self: stretch;
+    height:20px;
+}
+
+.flex-box-analyse-graphe--bar{
+    display: flex;
+    padding: 2px 0px;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-box-analyse-graphe--legend-container{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.flex-box-analyse-graphe--legend-item{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
